--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>oxape's Toolbox</title>
+    <title>oxape's Magicbox</title>
     <meta charset="UTF-8">
   </head>
   <body>
